# Chao_Acceptance_Task

./: CMakeLists.txt  boot_mcu.sh  readme.md
app/: acceptance.c  test_dummy_data.c  test_sht31.c  test_upload_microphone_data.c
esp_at_lib/: CMakeLists.txt  esp_at.c  esp_at.h  readme.md  test_esp_at.c  test_uart.c  uart_to_esp.c  uart_to_esp.h
scripts/: serial_receive.py
sensor_lib/: CMakeLists.txt  acceptance_task.c  acceptance_task.h  aceeptance_cfg.h
